# fip-version-project-action

./: .pylintrc.ini  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  code-style.yml
src/fip_version_project_action/: app.py  logic.py  schemas.py
src/fip_version_project_action/static/: action.js
src/fip_version_project_action/templates/: action.html
